testdata/baselines/reference/submodule/conformance/chainedPrototypeAssignment.errors.txt
mod.js(11,17): error TS8010: Type annotations can only be used in TypeScript files.
use.js(3,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
use.js(4,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== use.js (2 errors) ====
    /// <reference path='./types.d.ts'/>
    var mod = require('./mod');
    var a = new mod.A()
            ~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    var b = new mod.B()
            ~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    a.m('nope')
    b.m('not really')
    
==== types.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
==== mod.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    var A = function A() {
        this.a = 1
    }
    var B = function B() {
        this.b = 2
    }
    exports.A = A
    exports.B = B
    A.prototype = B.prototype = {
        /** @param {number} n */
                    ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m(n) {
            return n + 1
        }
    }
    